--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,10 @@ reqwest = { version = "0.11", features = ["blocking"] }
 ipnetwork = "0.20"
 pnet = "0.31"
 serde = { version = "1.0", features = ["derive"] }
+
+[profile.release]
+opt-level = "z"
+lto = true
+codegen-units = 1
+panic = "abort"
+strip = true
